force-app/main/default/objects/Circuit__c/fields/Circuit__c.field-meta.xml
<CustomField>
    <fullName>Circuit__c</fullName>
    <label>Circuit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>