force-app/main/default/objects/Circuit__c/fields/CircuitImgUrl__c.field-meta.xml
<CustomField>
    <fullName>CircuitImgUrl__c</fullName>
    <label>CircuitImgUrl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>