force-app/main/default/objects/Circuit__c/fields/Lap_Record__c.field-meta.xml
<CustomField>
    <fullName>Lap_Record__c</fullName>
    <label>Lap Record</label>
    <length>100</length>
    <type>Text</type>
</CustomField>