force-app/main/default/objects/Circuit__c/fields/Laps__c.field-meta.xml
<CustomField>
    <fullName>Laps__c</fullName>
    <label>Laps</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>