force-app/main/default/objects/Circuit__c/fields/Length__c.field-meta.xml
<CustomField>
    <fullName>Length__c</fullName>
    <label>Length</label>
    <length>20</length>
    <type>Text</type>
</CustomField>